# extract-service

./: .dockerignore  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  main.py  pyproject.toml  task.md
app/: consul_registration.py
app/controllers/: pdf_request.py
app/models/: document.py
app/routers/: pdf_router.py
app/services/: pdf_extractor.py
app/utils/: exceptions.py  pdf_decoder.py
tests/: test_pdf_decoder.py  test_pdf_extractor.py  test_pdf_request.py  test_pdf_router.py  test_rfc9457_exceptions.py
